# Catalyst

./: .gitignore  LICENSE  README.md  setup.cfg
examples/Full_random_example/: example_workflow.ipynb  example_workflow.py
examples/alignn_graph_construction/: generate_graph.py
examples/atomic_alignn_graph_construction/: generate_graph.py
examples/characterization/: gop.py
examples/gen_feature_rankings/: test_model.py
examples/graph_examples/alignn_graph_construction/: OUTCAR_Al_FCC  generate_graph.py
examples/graph_examples/atomic_alignn_graph_construction/: generate_graph.py
examples/graph_examples/characterization/: vgop.py
examples/predict_with_model/: predict_with_model.py
examples/predict_with_model/models/: model_2024-07-12_12-07-57  model_2024-07-12_12-08-05
examples/preprocess_data/: data_preprocessing.py
examples/realignn_graph_construction/: generate_graph.py
examples/sodas_example/: sodas_example.py
examples/sodas_sampling/: sodas_sampling.py
examples/test_model/: test_model.py
examples/test_model/models/: model_2024-01-10_19-33-31
examples/train_model/: train_model.py
src/: __init__.py  __init__.py.py
src/graph/: __init__.py.py  alignnd.py  generic_build.py  graph.py
src/io/: io.py
src/ml/: inference.py  ml.py  testing.py  training.py
src/observer/: params.py
src/physics/: properties.py
src/properties/: chemical_properties.py  physics_database.py  structure_properties.py
src/utilities/: chemical_properties.py  data_tools.py  distributions.py  rankings.py  sampling.py  stoichiometry.py  structure_properties.py
(+431 files in other folders)
