[metadata]
name = catalyst
version = 1.0.0
author = James Chapman
author_email = jc112358@bu.edu
description = A library for implementing the Catalyst framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Materials-Informatics-Laboratory/Catalyst

[option]
package_dir=
    =src
packages=find:
python_requires = >= 3.7
install_requires =
    ase
    torch>=2.0.0
    torch-geometric>=2.0.1
    networkx
    scipy
    umap-learn

[options.packages.find]
where=src
